--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
     <div class="divided_left" style="height: 500px;">
         <div class="left">Hello.</div>
         <div class="right">
-            Hey, you! Yes, you!
+            <div class="divided_left" style="height: 100%;">
+                <div class="left">Hello.</div>
+                <div class="right">
+                    Hey, you! Yes, you!
+                </div>
+            </div>
         </div>
     </div>
 
