--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div id="data"></div>
 
-    <div class="divided_left" style="height: 500px;">
+    <div class="divided_left" style="height: 500px;   border:5px solid #888;">
         <div class="left">Hello.</div>
         <div class="right">
             <div class="divided_left" style="height: 100%;">
