--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
 
     <div id="data"></div>
 
-    <div class="divided_left" style="height: 500px;   border:5px solid #888;">
-        <div class="left">Hello.</div>
+    <div class="vertically_divided" style="height: 500px;border:5px solid #888;">
+        <div class="left">
+            <div class="vertically_divided" style="height: 100%">
+                <div class="left">Hello.</div>
+                <div class="right">
+                    Hey, you! Yes, you!
+                </div>
+            </div>
+        </div>
         <div class="right">
-            <div class="divided_left" style="height: 100%;">
+            <div class="vertically_divided" style="height: 100%">
                 <div class="left">Hello.</div>
                 <div class="right">
                     Hey, you! Yes, you!
