--- a/index.html
+++ b/index.html
@@ -3,28 +3,23 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Splitter</title>
-    <script type="text/javascript" src="script.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <script type="text/javascript" src="splitter.js"></script>
+    <link rel="stylesheet" type="text/css" href="splitter.css"/>
 </head>
 <body>
 
     <div id="data"></div>
 
     <div class="vertically_divided" style="height: 500px;border:5px solid #888;">
-        <div class="left">
-            <div class="vertically_divided" style="height: 100%">
-                <div class="left">Hello.</div>
-                <div class="right">
-                    Hey, you! Yes, you!
-                </div>
-            </div>
+        <div class="horizontally_divided">
+            <div>Hello.</div>
+            <div>Hey, you! Yes, you!</div>
         </div>
-        <div class="right">
-            <div class="vertically_divided" style="height: 100%">
-                <div class="left">Hello.</div>
-                <div class="right">
-                    Hey, you! Yes, you!
-                </div>
+        <div class="vertically_divided">
+            <div>Hello.</div>
+            <div class="horizontally_divided">
+                <div>Hello.</div>
+                <div>Hey, you! Yes, you!</div>
             </div>
         </div>
     </div>
