--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Splitter</title>
-    <script type="text/javascript" src="splitter.js"></script>
-    <link rel="stylesheet" type="text/css" href="splitter.min.css"/>
+    <script type="text/javascript" src="splitter.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="splitter.css"/>
 </head>
 <body>
 
