--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
     <h2>Creating a splitter</h2>
     <p>There are two types of splitters - vertical and horizontal. To split a div - add 'vertically_divided' or 'horizontally_divided' class to it (make sure the dive you are splitting has at least two child divs, which will be the halves of the div. Also make sure that an element has some height defined. Maybe later the automatic calculation will be added, but right now you have to define height explicitly.</p>
     <code>&ltdiv class="vertically_divided" style="height:60px;">
-        &ltdiv>The left part&lt/div>
-        &ltdiv>The right part&lt/div>
-        &lt/div>
-    </code>
+    &ltdiv>The left part&lt/div>
+    &ltdiv>The right part&lt/div>
+&lt/div></code>
     <p>The code above will produce the result below:</p>
     <div class="vertically_divided" style="height:60px;">
         <div>The left part</div>
