White-stripe flaw workaround

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <p>And, of course, you can nest several splitters:</p>
 
-    <div class="vertically_divided" style="height: 500px;border:2px solid #888;">
+    <div class="vertically_divided" style="background: #888;height: 500px;border:2px solid #888;">
         <div style="background: #888;">Left part</div>
         <div class="horizontally_divided">
             <div class="vertically_divided">
