I haz de minifyer now! Lol

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Splitter</title>
-    <script type="text/javascript" src="splitter.js"></script>
+    <script type="text/javascript" src="splitter.min.js"></script>
     <link rel="stylesheet" type="text/css" href="splitter.css"/>
 </head>
 <body>
